DAPS-1055 Fix see-saw widget layout issues and overlapping navbar issue (#3)

--- a/src/assets/views/components/footer/style.css
+++ b/src/assets/views/components/footer/style.css
@@ -6,10 +6,11 @@
 }
 
 :local(.RewardState) {
-	margin-left: 30px;
-	margin-right: 30px;
-	height: 100%;
-	display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
+    display: flex;
+    width: calc(65vw + 250px);
 }
 
 :local(.StakingState) {
